fix(login): skip external identity provider for authentication with credentials
fixes gravitee-io/issues#4263